--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "lucide-react": "^0.548.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-fast-marquee": "^1.6.5",
     "react-icons": "^5.5.0",
     "react-responsive-carousel": "^3.2.23",
     "react-router": "^7.9.4",
     "react-toastify": "^11.0.5",
     "recharts": "^3.3.0",
+    "swiper": "^12.0.3",
     "tailwindcss": "^4.1.16"
   },
   "devDependencies": {
