--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^19.1.1",
     "react-fast-marquee": "^1.6.5",
     "react-icons": "^5.5.0",
+    "react-leaflet": "^5.0.0-rc.2",
     "react-responsive-carousel": "^3.2.23",
     "react-router": "^7.9.4",
     "react-toastify": "^11.0.5",
